Fixing events layout bug

--- a/app/assets/stylesheets/events/index.sass
+++ b/app/assets/stylesheets/events/index.sass
@@ -66,8 +66,7 @@ body[data-action="index"][data-controller="events"][data-namespace="null"]
         color: $title_text_color
         height: 44px
         width: 132px
-        padding-top: 8px
-        padding-left: 4px
+        padding: 8px 0 0 4px
         background: $box_title_color
         margin-bottom: 0
         text-transform: uppercase
